--- a/src/gridLayout/Orders/OrderList/OrderList.css
+++ b/src/gridLayout/Orders/OrderList/OrderList.css
@@ -34,7 +34,8 @@
   display: grid;
   grid-template-columns: auto 1fr;
   width: 100%;
-  place-items: center;
+  /* place-items: center; */
+  align-items: center;
   font-weight: 600;
   font: normal normal 600 20px Lora;
   column-gap: 12px;
