--- a/src/gridLayout/Login/LoginGrid.css
+++ b/src/gridLayout/Login/LoginGrid.css
@@ -51,7 +51,8 @@
 }
 
 .login-subtitle {
-  font-weight: 400;
+  font-weight: 300;
+  font-family: Roboto;
 }
 
 .form {
@@ -188,6 +189,10 @@ body {
   .input-box {
     padding-left: 12px;
     height: 32px;
+  }
+  .log-btn {
+    padding: 12px 0;
+    width: 225px;
   }
 }
 
