--- a/src/gridLayout/Orders/OrderList/OrderList.css
+++ b/src/gridLayout/Orders/OrderList/OrderList.css
@@ -297,6 +297,11 @@ body {
   margin: 30px 0;
 }
 
+.order-link {
+  text-decoration: none;
+  color: black;
+}
+
 @media screen and (min-width: 640px) {
   .mobile-sidebar {
     display: none;
