--- a/src/gridLayout/Orders/OrderList/OrderDetails.css
+++ b/src/gridLayout/Orders/OrderList/OrderDetails.css
@@ -16,7 +16,13 @@
 /* body {
   display: grid;
   grid-template-rows: auto auto auto;
-} */
+}
+   */
+
+body {
+  display: grid;
+  grid-template-rows: 54px 1fr auto;
+}
 
 .order-details-container {
   display: grid;
@@ -49,7 +55,7 @@
 }
 
 .order-input-box {
-  width: 90%;
+  width: 100%;
   border: 1px solid var(--border-color);
   border-radius: 4px;
   outline: none;
@@ -58,6 +64,19 @@
   font-weight: 400;
   color: var(--gray-color);
   padding: 4px 0 4px 8px;
+  padding-left: 8px;
+}
+
+.order-name-box {
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  outline: none;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--gray-color);
+  padding: 4px 0 4px 8px;
+  padding-left: 8px;
 }
 
 .order-details-form {
@@ -66,6 +85,9 @@
   row-gap: 20px;
   margin: 0 auto;
   width: 80%;
+  border: 2px solid var(--carrousel-color);
+  border-radius: 4px;
+  padding: 20px;
 }
 
 .order-details-header {
@@ -77,6 +99,7 @@
 .order-details-section {
   display: grid;
   row-gap: 10px;
+  width: 100%;
 }
 
 .order-details-name-input {
@@ -124,50 +147,247 @@
   display: grid;
   grid-template-rows: auto auto;
   row-gap: 12px;
-  justify-content: center;
+  width: 80%;
+  margin: auto;
 }
 
 .update-order-btn {
   background-color: black;
   color: white;
   border-radius: 4px;
-  min-width: 189px;
   padding: 8px 0;
+  width: 100%;
   border: none;
 }
 
 .cancel-order-btn {
   color: var(--normal-black-color);
   border-radius: 4px;
-  min-width: 189px;
   padding: 7px 0;
   border: 1px solid var(--gray-color);
+  width: 100%;
+  background-color: white;
+}
+
+.modal-container {
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  background-color: var(--modal-background);
+  position: fixed;
+}
+
+/* w-4/5 md:w-1/2 flex px-6 pt-6 pb-4 flex-col justify-between fullHd:w-[588px] h-[173px] bg-white rounded-sm */
+.modal-wrapper {
+  width: 80%;
+  display: grid;
+  grid-template-rows: auto auto;
+  padding: 24px;
+  padding-top: 24px;
+  padding-bottom: 16px;
+  background-color: white;
+  border-radius: 2px;
+  margin: 0 auto;
+  row-gap: 20px;
+}
+
+.modal-header {
+  display: grid;
+  column-gap: 16px;
+  grid-template-columns: auto 1fr;
+  align-items: start;
+  width: 100%;
+}
+.exclamation-icon {
+  color: var(--beige-color);
+  font-size: 24px;
+  padding-top: 4px;
+}
+
+.confirmation-text {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--black-color);
+}
+.confirmation-description {
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--gray-color);
+}
+
+.modal-confirmation {
+  text-align: center;
+  margin: 0 4px;
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  align-items: end;
+  column-gap: 10px;
+}
+
+.cancel-button {
+  height: 32px;
+  width: 75px;
+  border: 1px solid var(--modal-button-border);
+  border-radius: 4px;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--gray-color);
+}
+
+.confirm-button {
+  height: 32px;
+  width: 82px;
+  color: white;
+  border-radius: 4px;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  background-color: black;
 }
 
 @media screen and (min-width: 640px) {
   .order-details-container {
-    grid-template-columns: auto auto;
+    grid-template-columns: auto 2fr;
   }
 
-  .order-details-form {
+  .modal-wrapper {
     width: 100%;
   }
 
+  .order-details-form {
+    width: 80%;
+  }
+
   .order-buttons {
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: none;
     justify-content: space-between;
     column-gap: 12px;
-    padding-right: 10px;
+    width: 100%;
   }
 
   .order-details-container {
     column-gap: 20px;
   }
+  .modal-confirmation {
+    text-align: right;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .order-buttons {
+    grid-template-columns: auto auto;
+    width: 100%;
+  }
+
+  .order-details-name-input {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+  }
+
+  .order-details-container {
+    grid-template-columns: auto auto;
+  }
+
+  .cancel-order-btn {
+    min-width: 189px;
+  }
+
+  .update-order-btn {
+    min-width: 189px;
+  }
+
+  .modal-confirmation {
+    justify-content: end;
+  }
 }
 
 @media screen and (min-width: 1440px) {
+  .order-details-container {
+    margin-top: 20px;
+    column-gap: 0;
+    grid-template-columns: auto auto;
+  }
+  .order-details-form {
+    height: 100%;
+    width: 80%;
+    margin: 0;
+  }
+  .order-details-img-wrapper {
+    width: 70%;
+    margin-top: 60px;
+  }
+
+  .order-details-section {
+    width: 100%;
+  }
+
+  .order-input-box {
+    width: 100%;
+  }
+
   body {
     display: grid;
-    grid-template-rows: 54px 1fr auto;
+    grid-template-rows: 72px auto auto;
+    row-gap: 80px;
+  }
+
+  .order-details-name-input {
+    column-gap: 30px;
+  }
+
+  #obs-box {
+    padding: 10px 0 20px 8px;
+  }
+  .order-details-header {
+    font-size: 38px;
+    font-family: Lora;
+    font-weight: 700;
+    color: var(--normal-black-color);
+  }
+  .modal-wrapper {
+    width: 588px;
+    height: 173px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .order-name-box {
+    height: 32px;
+  }
+
+  .order-input-box {
+    height: 32px;
+  }
+
+  .order-details-container {
+    grid-template-columns: 50% auto;
+  }
+
+  .order-details-form {
+    width: 70%;
+  }
+
+  .order-details-img-wrapper {
+    width: 50%;
+  }
+  .order-details-img {
+    width: 100%;
+  }
+
+  .order-details-img-background {
+    left: 0;
+    top: 15%;
+    width: 130%;
   }
 }
