--- a/src/gridLayout/Homepage/HomePage.css
+++ b/src/gridLayout/Homepage/HomePage.css
@@ -40,6 +40,7 @@
   height: 100%;
   width: 100%;
 }
+
 .carrousel-description-container {
   display: grid;
   grid-template-rows: auto auto;
@@ -209,7 +210,7 @@
 
   .under-carrousel-img {
     width: 100%;
-    height: 70%;
+    height: 200px;
   }
 
   .under-carrousel-section {
@@ -229,6 +230,10 @@
   .under-carrousel-card-description-container {
     padding: 10px 0;
     row-gap: 10px;
+    text-align: start;
+    display: grid;
+    height: 100px;
+    grid-template-columns: auto auto;
   }
 
   .divider2 {
@@ -294,6 +299,10 @@
     width: 95%;
     margin: auto;
     height: 400px;
+  }
+
+  .under-carrousel-img {
+    height: 300px;
   }
 }
 
