--- a/src/gridLayout/Orders/OrderList/OrderList.css
+++ b/src/gridLayout/Orders/OrderList/OrderList.css
@@ -124,6 +124,13 @@
   color: var(--important-black-color);
 }
 
+.shopping-item-id {
+  font-size: 20px;
+  font-weight: 600;
+  font-family: Lora;
+  color: var(--important-black-color);
+}
+
 .order-items {
   padding-top: 6px;
 }
@@ -133,6 +140,13 @@
   font-family: Roboto;
   font-size: 18px;
   font-weight: normal;
+}
+
+.shopping-label {
+  color: var(--normal-black-color);
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .order-count {
@@ -170,6 +184,12 @@
   border-top: 1px solid #e9e9e9;
 }
 
+.shopping-divider {
+  border: 1px solid var(--border-color);
+  margin: 20px 0;
+  width: 100%;
+}
+
 .orders-container {
   display: grid;
   grid-template-rows: auto auto;
@@ -188,6 +208,14 @@
 
 .order-edit {
   padding-top: 10px;
+}
+
+.shopping-edit {
+  padding-top: 10px;
+  place-items: center;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 10px;
 }
 
 .order-edit-label {
@@ -300,6 +328,14 @@ body {
 .order-link {
   text-decoration: none;
   color: black;
+}
+
+.shopping-items {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  column-gap: 10px;
+  font-size: 22px;
 }
 
 @media screen and (min-width: 640px) {
@@ -430,6 +466,10 @@ body {
     min-width: 189px;
     padding: 6px 0;
   }
+
+  .shopping-divider {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -478,6 +518,10 @@ body {
     font-size: 25px;
   }
 
+  .shopping-item-id {
+    font-size: 25px;
+  }
+
   .order-price {
     font-size: 25px;
   }
@@ -490,6 +534,10 @@ body {
     grid-template-columns: auto 75% 15%;
     column-gap: 25px;
     place-items: start;
+  }
+
+  .order-edit-label {
+    cursor: pointer;
   }
 
   .shopping-wrapper {
@@ -572,6 +620,9 @@ body {
   .order-item-id {
     font-size: 30px;
   }
+  .shopping-item-id {
+    font-size: 30px;
+  }
 
   .order-price {
     font-size: 30px;
@@ -582,6 +633,9 @@ body {
   }
 
   .order-label {
+    font-size: 24px;
+  }
+  .shopping-label {
     font-size: 24px;
   }
 
